Add deployment test profile to parent.