@@ -22,6 +22,7 @@
         <maven.eclipse.version>2.9</maven.eclipse.version>
         <maven.antrun.version>1.7</maven.antrun.version>
         <jacoco.version>0.7.0.201403182114</jacoco.version>
+        <deployment.classes.include>**/*DeploymentTestNG.java</deployment.classes.include>
         <functional.classes.include>**/*TestNG.java</functional.classes.include>
         <functional.classes.exclude>**/*UnitTestNG.java</functional.classes.exclude>
         <surefire.and.failsafe.report.dir>target/test-report</surefire.and.failsafe.report.dir>
@@ -103,6 +104,57 @@
                                         <exclude>${functional.classes.exclude}</exclude>
                                     </includes>
                                     <groups>${functional.groups}</groups>
+                                    <forkMode>always</forkMode>
+                                    <additionalClasspathElements>
+                                        <additionalClasspathElement>${env.HADOOP_HOME}/etc/hadoop</additionalClasspathElement>
+                                    </additionalClasspathElements>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>deployment</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.version}</version>
+                        <executions>
+                            <execution>
+                                <id>unit-test</id>
+                                <configuration>
+                                    <skip>true</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>default-test</id>
+                                <configuration>
+                                    <skip>true</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>functional-test</id>
+                                <configuration>
+                                    <skip>true</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>deployment-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <phase>integration-test</phase>
+                                <configuration>
+                                    <argLine>-XX:MaxPermSize=256m ${argLine}</argLine>
+                                    <skip>false</skip>
+                                    <includes>
+                                        <include>${deployment.classes.include}</include>
+                                    </includes>
+                                    <groups>${deployment.groups}</groups>
                                     <forkMode>always</forkMode>
                                     <additionalClasspathElements>
                                         <additionalClasspathElement>${env.HADOOP_HOME}/etc/hadoop</additionalClasspathElement>
